<resources>
    <string name="app_name">smsEmergencer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_above_permissions_button_text">To be able to read codewords, we need you to grant our app SMS permissions. Please click the button below:</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_send_location">Enable location messages</string>
    <string name="pref_description_send_location">Sends location back with sms</string>

    <string name="pref_title_triggerword_send_location">Trigger word</string>
    <string name="pref_default_triggerword_send_location">Kur tu??</string>


    <string name="pref_title_do_beep">Do a loud beep</string>
    <string name="pref_description_do_beep">Does a loud beep</string>

    <string name="pref_title_triggerword_do_beep">Beep trigger word</string>
    <string name="pref_default_triggerword_do_beep">pyp</string>
    <string name="pref_title_do_beep_length">Beep length (s)</string>
    <string name="pref_title_do_beep_frequency">Beep frequency (Hz)</string>


    <string-array name="pref_beep_lengths">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>8</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
    </string-array>
    <string-array name="pref_beep_tones">
        <item>440</item>
        <item>600</item>
        <item>880</item>
        <item>1200</item>
        <item>2000</item>
        <item>3000</item>
        <item>4000</item>
        <item>6000</item>
        <item>8000</item>
    </string-array>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
