<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="send_location_switch"
        android:summary="@string/pref_description_send_location"
        android:title="@string/pref_title_send_location" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_triggerword_send_location"
        android:inputType="textCapWords"
        android:key="send_location_trigger"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_triggerword_send_location" />


    <SwitchPreference
        android:defaultValue="true"
        android:key="do_beep_switch"
        android:summary="@string/pref_description_do_beep"
        android:title="@string/pref_title_do_beep" />


    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_triggerword_do_beep"
        android:inputType="textCapWords"
        android:key="do_beep_trigger"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_triggerword_do_beep" />

    <ListPreference
        android:defaultValue="5"
        android:entries="@array/pref_beep_lengths"
        android:entryValues="@array/pref_beep_lengths"
        android:key="do_beep_length"
        android:title="@string/pref_title_do_beep_length" />

    <ListPreference
        android:defaultValue="880"
        android:entries="@array/pref_beep_tones"
        android:entryValues="@array/pref_beep_tones"
        android:key="do_beep_frequency"
        android:title="@string/pref_title_do_beep_frequency" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!--<EditTextPreference-->
        <!--android:capitalize="words"-->
        <!--android:defaultValue="@string/pref_default_display_name"-->
        <!--android:inputType="textCapWords"-->
        <!--android:key="example_text"-->
        <!--android:maxLines="1"-->
        <!--android:selectAllOnFocus="true"-->
        <!--android:singleLine="true"-->
        <!--android:title="@string/pref_title_display_name" />-->

    <!--&lt;!&ndash; NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to-->
         <!--dismiss it. &ndash;&gt;-->
    <!--&lt;!&ndash; NOTE: ListPreference's summary should be set to its value by the activity code. &ndash;&gt;-->
    <!--<ListPreference-->
        <!--android:defaultValue="-1"-->
        <!--android:entries="@array/pref_example_list_titles"-->
        <!--android:entryValues="@array/pref_example_list_values"-->
        <!--android:key="example_list"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null"-->
        <!--android:title="@string/pref_title_add_friends_to_messages" />-->

</PreferenceScreen>
